Bug 857647 - Don't show balloon notification on new mail if tray icon is disabled. r=Neil CLOSED TREE